# KMeans_Simulator

./: CMakeLists.txt  README.md  resource.qrc
res/: Default-0.qss
src/: kmeansdisplay.cpp  kmeansdisplay.h  kmeansobject.cpp  kmeansobject.h  main.cpp  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
